# tse

./: .gitignore  README.md  README.rst  pyproject.toml  run-loop-git.sh  scrapy.cfg
data/: voting_machine_logs_matchers.txt
data/examples/comum/config/: ele-c.json
data/examples/ele2022/9577/config/: cert-e009577-a.cer  mun-e009577-cm.json  mun-e009577-cm.sig
data/examples/ele2022/9577/config/br/: br-e009577-i.json
data/examples/ele2022/9577/config/df/: df-e009577-i.json
data/examples/ele2022/9577/config/rn/: rn-e009577-i.json
data/examples/ele2022/9577/dados-simplificados/br/: br-c0001-e009577-r.json  br-c0001-e009577-r.sig
data/examples/ele2022/9577/dados/br/: br-c0001-e009577-085-f.json  br-c0001-e009577-085-f.sig  br-c0001-e009577-v.json  br-c0001-e009577-v.sig  br-e009577-ab.json  br-e009577-ab.sig
data/examples/ele2022/9577/dados/df/: df-c0001-e009577-068-f.json  df-c0001-e009577-068-f.sig  df-c0001-e009577-v.json  df-c0001-e009577-v.sig  df-e009577-ab.json  df-e009577-ab.sig  df97012-c0001-e009577-v.json  df97012-c0001-e009577-v.sig
data/examples/ele2022/9577/dados/rn/: rn-c0001-e009577-068-f.json  rn-c0001-e009577-068-f.sig  (+336 more)
data/examples/ele2022/9579/config/: cert-e009579-a.cer  mun-e009579-cm.json  mun-e009579-cm.sig
divulgacao/: divulgacao.py  items.py  middlewares.py  pipelines.py  settings.py
divulgacao/common/: basespider.py  fileinfo.py  index.py
divulgacao/spiders/: divulga.py  urna.py
notebooks/: ballot_box_logs.ipynb  voting_machine_logs.ipynb
tests/: test_divulgacao.py
tse/: extensions.py  middlewares.py  parsers.py  settings.py
tse/common/: ballot_box_files.py  basespider.py  fileinfo.py  index.py  pathinfo.py  voting_machine_files.py
tse/spiders/: divulga.py  urna.py
tse/utils/: __init__.py  grok.py  lru.py  manage_versions.py  parse_logs.py  zipfile_remove.py
(+1407 files in other folders)
