[tool.poetry]
name = "tse"
version = "0.1.0"
description = ""
authors = ["Marcelo Oliveira <capyvara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Scrapy = "^2.6.3"
pyOpenSSL = "^22.1.0"
ckanapi = "^4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
