[tool.poetry]
name = "tse"
version = "0.1.0"
description = ""
authors = ["Marcelo Oliveira <capyvara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.6.3"
tdqm = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pandas = "^1.5.0"
jupyter = "^1.0.0"
py7zr = "^0.20.0"
ipywidgets = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
