[tool.poetry]
name = "tse"
version = "0.1.0"
description = ""
authors = ["Marcelo Oliveira <capyvara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.extract]
optional = true

[tool.poetry.group.extract.dependencies]
Scrapy = "^2.6.3"
ckanapi = "^4.7"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pandas = "^1.5.0"
jupyter = "^1.0.0"
py7zr = {git = "https://github.com/miurahr/py7zr.git"}
ipywidgets = "^7.0"
tdqm = "^0.0.1"
regex = "^2022.10.31"
pyarrow = "^10.0.0"
plotly = "^5.11.0"
dask = {extras = ["complete"], version = "^2022.11.1"}
elasticsearch = {extras = ["async"], version = "^8.5.1"}
mmh3 = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
